--- a/mcd.html
+++ b/mcd.html
@@ -3,6 +3,7 @@
 <head>
     <title>狸梦-热爱创造生活</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/backg1.css">
     <link rel="stylesheet" type="text/css" href="./css/mcd.css">
 </head>
